--- a/packages/crypto/package.json
+++ b/packages/crypto/package.json
@@ -13,7 +13,8 @@
     "access": "public"
   },
   "files": [
-    "dist/"
+    "dist/",
+    "sceau.json"
   ],
   "type": "module",
   "sideEffects": false,
@@ -38,7 +39,8 @@
     "build:npm": "tsup --clean --format esm,cjs --dts",
     "build:server": "tsup --clean --format esm",
     "typecheck": "tsc",
-    "test": "jest --color"
+    "test": "jest --color",
+    "prepack": "sceau sign"
   },
   "dependencies": {
     "@socialgouv/e2esdk-api": "workspace:^",
@@ -52,6 +54,7 @@
     "@types/libsodium-wrappers": "^0.7.10",
     "@types/node": "^18.11.10",
     "jest": "^29.3.1",
+    "sceau": "^1.0.0",
     "tsup": "^6.5.0",
     "typescript": "^4.9.3"
   }
