--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -11,7 +11,8 @@
   },
   "repository": "https://github.com/SocialGouv/e2esdk",
   "files": [
-    "build/"
+    "build/",
+    "sceau.json"
   ],
   "type": "module",
   "module": "./build/main.js",
@@ -31,7 +32,8 @@
     "start": "NODE_ENV=production node ./build/main.js",
     "build:server": "swc src --copy-files --include-dotfiles -d build",
     "typecheck": "tsc",
-    "db": "zx ./build/database/operations.js"
+    "db": "zx ./build/database/operations.js",
+    "sign": "sceau sign"
   },
   "dependencies": {
     "@socialgouv/e2esdk-api": "workspace:^",
@@ -46,6 +48,7 @@
     "fastify-plugin": "^4.3.0",
     "mitt": "^3.0.0",
     "postgres": "^3.3.2",
+    "sceau": "^1.0.0",
     "zod": "^3.19.1",
     "zod-to-json-schema": "^3.19.3",
     "zx": "^7.1.1"
