--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -151,13 +151,33 @@ jobs:
       - name: Install dependencies
         run: pnpm install
 
-      # todo: Inject server version to package.json (before signing)
       - name: Build & sign server
         run: |
           pnpm build:server
+          echo "${{ needs.cd-npm.outputs.server-version }}" > packages/server/build/VERSION
           pnpm --filter @socialgouv/e2esdk-server sign
         env:
           SCEAU_PRIVATE_KEY: ${{ secrets.SCEAU_PRIVATE_KEY }}
+
+      - name: Collect Docker labels & tags
+        id: docker-labels-tags
+        run: |
+            echo 'labels<<__LABELS_EOF__' >> $GITHUB_OUTPUT
+            echo "org.opencontainers.image.title=@socialgouv/e2esdk-server" >> $GITHUB_OUTPUT
+            echo "org.opencontainers.image.description=End-to-end encryption server" >> $GITHUB_OUTPUT
+            echo "org.opencontainers.image.version=${{ needs.cd-npm.outputs.server-version }}" >> $GITHUB_OUTPUT
+            echo "org.opencontainers.image.revision=${{ github.sha }}" >> $GITHUB_OUTPUT
+            echo "org.opencontainers.image.created=${{ steps.timestamp.outputs.timestamp }}" >> $GITHUB_OUTPUT
+            echo "org.opencontainers.image.licenses=Apache-2.0" >> $GITHUB_OUTPUT
+            echo "org.opencontainers.image.source=https//github.com/${{github.repository}}/tree/${{ github.sha }}" >> $GITHUB_OUTPUT
+            echo "org.opencontainers.image.documentation=https://github.com/${{github.repository}}/blob/main/packages/server/README.md" >> $GITHUB_OUTPUT
+            echo "org.opencontainers.image.url=https://github.com/${{github.repository}}/actions/runs/${{github.run_id}}" >> $GITHUB_OUTPUT
+            echo '__LABELS_EOF__' >> $GITHUB_OUTPUT
+            echo 'tags<<__TAGS_EOF__' >> $GITHUB_OUTPUT
+            echo "ghcr.io/socialgouv/e2esdk/server:${{ github.ref_name == 'main' && 'latest' || 'edge' }}" >> $GITHUB_OUTPUT
+            echo "ghcr.io/socialgouv/e2esdk/server:${{ needs.cd-npm.outputs.server-version }}" >> $GITHUB_OUTPUT
+            echo "ghcr.io/socialgouv/e2esdk/server:git-${{ github.ref_name }}-${{ github.sha }}" >> $GITHUB_OUTPUT
+            echo '__TAGS_EOF__' >> $GITHUB_OUTPUT
 
       - name: Docker registry authentication
         uses: docker/login-action@v2
@@ -166,37 +186,28 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ github.token }}
 
-      # todo: Use docker/metadata-action to organise tags & labels
       - name: Build & Publish (Docker)
         uses: docker/build-push-action@v3
+        id: docker-build-push
         with:
           context: .
           file: packages/server/Dockerfile
           build-args: |
             BUILD_URL=https://github.com/${{github.repository}}/actions/runs/${{github.run_id}}
             SCEAU_VERIFICATION_MODE=--strict
-          labels: |
-            org.opencontainers.image.title=@socialgouv/e2esdk-server
-            org.opencontainers.image.description=End-to-end encryption server
-            org.opencontainers.image.version=${{ needs.cd-npm.outputs.server-version }}
-            org.opencontainers.image.revision=${{ github.sha }}
-            org.opencontainers.image.created=${{ steps.timestamp.outputs.timestamp }}
-            org.opencontainers.image.licenses=Apache-2.0
-            org.opencontainers.image.source=https//github.com/SocialGouv/e2esdk/tree/${{ github.sha }}
-            org.opencontainers.image.documentation=https://github.com/SocialGouv/e2esdk/blob/main/packages/server/README.md
-          tags: |
-            ghcr.io/socialgouv/e2esdk/server:${{ github.ref_name == 'main' && 'latest' || 'beta' }}
-            ghcr.io/socialgouv/e2esdk/server:${{ needs.cd-npm.outputs.server-version }}
-            ghcr.io/socialgouv/e2esdk/server:git-${{ github.ref_name }}-${{ github.sha }}
+          labels: "${{ steps.docker-labels-tags.outputs.labels }}"
+          tags: "${{ steps.docker-labels-tags.outputs.tags }}"
           push: true
 
-      - name: Display Docker image labels
+      - name: Generate step summary
         run: |
-          docker inspect ghcr.io/socialgouv/e2esdk/server:git-${{ github.ref_name }}-${{ github.sha }} --format='{{json .Config.Labels}}' \
-          | sed \
-            -e 's/^{"//' -e 's/"}$//' \
-            -e 's/\",\"/\n/g'         \
-            -e 's/":"/: /g'
-        # 1. Drop the object curly braces (and surrounding quotes)
-        # 2. Replace entry separators by newlines (and drop surrounding quotes)
-        # 3. Replace key:value separators with spaces (and drop surrounding quotes)
+          echo "## 🐳 &nbsp;Docker image" >> $GITHUB_STEP_SUMMARY
+          echo "Digest: \`${{ steps.docker-build-push.outputs.digest }}\`" >> $GITHUB_STEP_SUMMARY
+          echo "### 📌 &nbsp;Tags" >> $GITHUB_STEP_SUMMARY
+          echo "\`\`\`" >> $GITHUB_STEP_SUMMARY
+          echo "${{ steps.docker-labels-tags.outputs.tags }}" >> $GITHUB_STEP_SUMMARY
+          echo "\`\`\`" >> $GITHUB_STEP_SUMMARY
+          echo "### 🏷 &nbsp;Labels" >> $GITHUB_STEP_SUMMARY
+          echo "\`\`\`" >> $GITHUB_STEP_SUMMARY
+          echo "${{ steps.docker-labels-tags.outputs.labels }}" >> $GITHUB_STEP_SUMMARY
+          echo "\`\`\`" >> $GITHUB_STEP_SUMMARY
