--- a/examples/fullstack/contact-forms/package.json
+++ b/examples/fullstack/contact-forms/package.json
@@ -10,16 +10,16 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@chakra-ui/react": "^2.4.2",
+    "@chakra-ui/react": "^2.4.3",
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
     "@socialgouv/e2esdk-client": "workspace:*",
     "@socialgouv/e2esdk-crypto": "workspace:*",
     "@socialgouv/e2esdk-devtools": "workspace:*",
     "@socialgouv/e2esdk-react": "workspace:*",
-    "@emotion/react": "^11.10.5",
-    "@emotion/styled": "^11.10.5",
-    "@tanstack/react-query": "^4.18.0",
-    "@tanstack/react-query-devtools": "^4.18.0",
-    "framer-motion": "^7.6.15",
+    "@tanstack/react-query": "^4.20.4",
+    "@tanstack/react-query-devtools": "^4.20.4",
+    "framer-motion": "^7.10.0",
     "graphql": "^16.6.0",
     "graphql-request": "^5.0.0",
     "next": "13.0.5",
@@ -27,12 +27,12 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.40.0",
     "react-icons": "^4.7.1",
-    "zod": "^3.19.1"
+    "zod": "^3.20.2"
   },
   "devDependencies": {
-    "@babel/core": ">=7.0.0 <8.0.0",
+    "@babel/core": "^7.20.5",
     "@types/node": "18.11.10",
-    "@types/react": "^18.0.25",
+    "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "eslint": "8.28.0",
     "eslint-config-next": "13.0.5",
