fix: Inject server version in package.json

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -170,8 +170,9 @@ jobs:
       - name: Build & sign server
         run: |
           pnpm build:server
-          echo "${{ needs.cd-npm.outputs.server-version }}" > packages/server/VERSION
-          pnpm --filter @socialgouv/e2esdk-server sign
+          cd packages/server
+          pnpm version ${{ needs.cd-npm.outputs.server-version }} --no-commit-hooks --no-git-tag-version
+          pnpm sign
         env:
           SCEAU_PRIVATE_KEY: ${{ secrets.SCEAU_PRIVATE_KEY }}
 
