--- a/examples/fullstack/contact-forms/package.json
+++ b/examples/fullstack/contact-forms/package.json
@@ -13,10 +13,10 @@
     "@chakra-ui/react": "^2.4.3",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
-    "@socialgouv/e2esdk-client": "workspace:*",
-    "@socialgouv/e2esdk-crypto": "workspace:*",
-    "@socialgouv/e2esdk-devtools": "workspace:*",
-    "@socialgouv/e2esdk-react": "workspace:*",
+    "@socialgouv/e2esdk-client": "^1.0.0-beta.3",
+    "@socialgouv/e2esdk-crypto": "^1.0.0-beta.3",
+    "@socialgouv/e2esdk-devtools": "^1.0.0-beta.8",
+    "@socialgouv/e2esdk-react": "^1.0.0-beta.3",
     "@tanstack/react-query": "^4.20.4",
     "@tanstack/react-query-devtools": "^4.20.4",
     "framer-motion": "^7.10.0",
