--- a/package.json
+++ b/package.json
@@ -66,6 +66,19 @@
       ],
       "@semantic-release/release-notes-generator",
       "@semantic-release/npm",
+      [
+        "@semantic-release/github",
+        {
+          "successComment": false,
+          "addReleases": "bottom",
+          "assets": [
+            {
+              "path": "sceau.json",
+              "label": "Code signature"
+            }
+          ]
+        }
+      ],
       "@socialgouv/e2esdk-semantic-release"
     ],
     "branches": [
