--- a/examples/fullstack/contact-forms/package.json
+++ b/examples/fullstack/contact-forms/package.json
@@ -13,10 +13,10 @@
     "@chakra-ui/react": "^2.4.4",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
-    "@socialgouv/e2esdk-client": "^1.0.0-beta.6",
-    "@socialgouv/e2esdk-crypto": "^1.0.0-beta.6",
-    "@socialgouv/e2esdk-devtools": "^1.0.0-beta.11",
-    "@socialgouv/e2esdk-react": "^1.0.0-beta.6",
+    "@socialgouv/e2esdk-client": "1.0.0-beta.7",
+    "@socialgouv/e2esdk-crypto": "1.0.0-beta.7",
+    "@socialgouv/e2esdk-devtools": "1.0.0-beta.12",
+    "@socialgouv/e2esdk-react": "1.0.0-beta.7",
     "@tanstack/react-query": "^4.20.4",
     "@tanstack/react-query-devtools": "^4.20.4",
     "framer-motion": "^7.10.3",
@@ -25,15 +25,15 @@
     "next": "13.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.41.0",
+    "react-hook-form": "^7.41.1",
     "react-icons": "^4.7.1",
     "zod": "^3.20.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.5",
+    "@babel/core": "^7.20.7",
     "@types/node": "18.11.10",
     "@types/react": "^18.0.26",
-    "@types/react-dom": "^18.0.9",
+    "@types/react-dom": "^18.0.10",
     "eslint": "8.28.0",
     "eslint-config-next": "13.0.5",
     "typescript": "4.9.3"
