chore: Disable GitHub releases

--- a/package.json
+++ b/package.json
@@ -66,20 +66,7 @@
       ],
       "@semantic-release/release-notes-generator",
       "@semantic-release/npm",
-      "@socialgouv/e2esdk-semantic-release",
-      [
-        "@semantic-release/github",
-        {
-          "successComment": false,
-          "addReleases": "bottom",
-          "assets": [
-            {
-              "path": "sceau.json",
-              "label": "Code signature"
-            }
-          ]
-        }
-      ]
+      "@socialgouv/e2esdk-semantic-release"
     ],
     "branches": [
       "main",
