chore: No need to specify sceau.json in output files
It would be used for NPM publish, but the package is private.

--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -11,8 +11,7 @@
   },
   "repository": "https://github.com/SocialGouv/e2esdk",
   "files": [
-    "build/",
-    "sceau.json"
+    "build/"
   ],
   "type": "module",
   "module": "./build/main.js",
