--- a/examples/fullstack/contact-forms/package.json
+++ b/examples/fullstack/contact-forms/package.json
@@ -13,16 +13,18 @@
     "@chakra-ui/react": "^2.4.6",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
-    "@socialgouv/e2esdk-client": "1.0.0-beta.7",
-    "@socialgouv/e2esdk-crypto": "1.0.0-beta.7",
-    "@socialgouv/e2esdk-devtools": "1.0.0-beta.12",
-    "@socialgouv/e2esdk-react": "1.0.0-beta.7",
+    "@socialgouv/e2esdk-client": "workspace:*",
+    "@socialgouv/e2esdk-crypto": "workspace:*",
+    "@socialgouv/e2esdk-devtools": "workspace:*",
+    "@socialgouv/e2esdk-react": "workspace:*",
     "@tanstack/react-query": "^4.20.4",
     "@tanstack/react-query-devtools": "^4.20.4",
+    "formidable": "^2.1.1",
     "framer-motion": "^7.10.3",
     "graphql": "^16.6.0",
     "graphql-request": "^5.1.0",
     "next": "13.0.5",
+    "pretty-bytes": "^6.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.41.5",
@@ -31,6 +33,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.7",
+    "@types/formidable": "^2.0.5",
     "@types/node": "18.11.10",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
