--- a/examples/fullstack/contact-forms/docker-compose.yml
+++ b/examples/fullstack/contact-forms/docker-compose.yml
@@ -49,7 +49,7 @@ services:
       start_period: 3s
       retries: 50
 
-  # e2esdk-db-verify-image-signature:
+  # e2esdk-verify-image-signature:
   #   image: ghcr.io/socialgouv/e2esdk/server:beta
   #   command: packages/server/node_modules/.bin/sceau verify --packageDir packages/server --strict
 
@@ -81,12 +81,13 @@ services:
       - SIGNATURE_PUBLIC_KEY=gsE7B63ETtNDIzAwXEp3X1Hv12WCKGH6h7brV3U9NKE
       - SIGNATURE_PRIVATE_KEY=___examples-server-signkey__NOT-FOR-PROD__yCwTsHrcRO00MjMDBcSndfUe_XZYIoYfqHtutXdT00oQ
       - CORS_ALLOWED_ORIGINS=http://localhost:4000
+      - DISABLE_CODE_SIGNATURE_CHECK=true
     links:
       - e2esdk-db
     depends_on:
       app-db:
         condition: service_healthy
-      # e2esdk-db-verify-image-signature:
+      # e2esdk-verify-image-signature:
       #   condition: service_completed_successfully
       e2esdk-db-ops:
         condition: service_completed_successfully
