--- a/examples/fullstack/contact-forms/package.json
+++ b/examples/fullstack/contact-forms/package.json
@@ -28,6 +28,7 @@
     "pretty-bytes": "^6.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-focus-lock": "^2.9.2",
     "react-hook-form": "^7.41.5",
     "react-icons": "^4.7.1",
     "zod": "^3.20.2"
