chore: Normalise e2esdk as the default spelling

--- a/examples/fullstack/contact-forms/docker-compose.yml
+++ b/examples/fullstack/contact-forms/docker-compose.yml
@@ -32,7 +32,7 @@ services:
       app-db:
         condition: service_healthy
 
-  # E2ESDK --
+  # e2esdk --
 
   e2esdk-db:
     image: postgres:14.1
