--- a/docs/package.json
+++ b/docs/package.json
@@ -26,8 +26,10 @@
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "2.2.0",
+    "@docusaurus/theme-classic": "^2.2.0",
     "@docusaurus/types": "^2.2.0",
     "@tsconfig/docusaurus": "^1.0.6",
+    "@types/node": "^18.11.18",
     "typescript": "^4.9.4"
   },
   "browserslist": {
