--- a/docs/package.json
+++ b/docs/package.json
@@ -19,6 +19,7 @@
     "@docusaurus/core": "2.2.0",
     "@docusaurus/preset-classic": "2.2.0",
     "@mdx-js/react": "^1.6.22",
+    "@socialgouv/e2esdk-crypto": "workspace:*",
     "clsx": "^1.2.1",
     "prism-react-renderer": "^1.3.5",
     "react": "^17.0.2",
@@ -43,6 +44,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "browser": {
+    "path": false
   },
   "engines": {
     "node": ">=16.14"
