--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -91,8 +91,8 @@ jobs:
 
       - name: Publish (NPM)
         run: |
-          npx multi-semantic-release                    \
-            --ignore-packages="config/**,examples/**"   \
+          npx multi-semantic-release                        \
+            --ignore-packages="config/**,docs,examples/**"  \
             --deps.bump=satisfy
         env:
           SCEAU_PRIVATE_KEY: ${{ secrets.SCEAU_PRIVATE_KEY }}
