chore: Add docs build pipeline

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "build:npm": "turbo run build:npm",
     "build:server": "turbo run build:server",
     "build:docker": "docker build . -f packages/server/Dockerfile -t e2esdk:local",
+    "build:docs": "turbo run build:docs",
     "typecheck": "turbo run typecheck",
     "test": "turbo run test",
     "lint": "turbo run lint",
