--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -211,8 +211,8 @@ jobs:
           file: packages/server/Dockerfile
           build-args: |
             SCEAU_VERIFICATION_MODE=--strict
-          labels: "${{ steps.docker-labels-tags.outputs.labels }}"
-          tags: "${{ steps.docker-labels-tags.outputs.tags }}"
+          labels: '${{ steps.docker-labels-tags.outputs.labels }}'
+          tags: '${{ steps.docker-labels-tags.outputs.tags }}'
           push: true
 
       - name: Generate step summary
