--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -40,6 +40,7 @@
     "prepack": "sceau sign"
   },
   "dependencies": {
+    "@47ng/opaque-client": "^2.1.4",
     "@socialgouv/e2esdk-api": "workspace:^",
     "@socialgouv/e2esdk-crypto": "workspace:^",
     "local-state-sync": "1.0.0-beta.6",
