--- a/packages/devtools/package.json
+++ b/packages/devtools/package.json
@@ -51,6 +51,7 @@
     "@emotion/cache": "^11.10.5",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@socialgouv/e2esdk-api": "workspace:^",
     "@socialgouv/e2esdk-crypto": "workspace:^",
     "@socialgouv/e2esdk-react": "workspace:^",
     "@tanstack/react-query": "^4.22.0",
@@ -59,6 +60,7 @@
     "react-focus-lock": "^2.9.2",
     "react-hook-form": "^7.42.1",
     "react-icons": "^4.7.1",
+    "vite-plugin-top-level-await": "^1.2.4",
     "zod": "^3.20.2"
   },
   "devDependencies": {
@@ -76,6 +78,7 @@
     "sceau": "^1.3.0",
     "tsup": "^6.5.0",
     "typescript": "^4.9.4",
-    "vite": "^4.0.4"
+    "vite": "^4.0.4",
+    "vite-plugin-wasm": "^3.2.1"
   }
 }
