--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -35,6 +35,7 @@
     "sign": "sceau sign"
   },
   "dependencies": {
+    "@47ng/opaque-server": "^2.1.4",
     "@fastify/cors": "^8.2.0",
     "@fastify/swagger": "^8.3.0",
     "@fastify/swagger-ui": "^1.3.0",
@@ -43,9 +44,11 @@
     "@socialgouv/e2esdk-crypto": "workspace:^",
     "dotenv": "^16.0.3",
     "fastify": "^4.11.0",
-    "fastify-micro": "4.0.0-beta.3",
+    "fastify-micro": "4.0.0-beta.4",
     "fastify-plugin": "^4.5.0",
+    "ioredis": "^5.3.0",
     "mitt": "^3.0.0",
+    "pino": "^8.11.0",
     "postgres": "^3.3.3",
     "sceau": "^1.3.0",
     "zod": "^3.20.2",
