--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -38,6 +38,17 @@ jobs:
       - name: Install dependencies
         run: pnpm install
 
+      - name: Install & setup mkcert
+        run: |
+          sudo apt install libnss3-tools
+          curl -JLO "https://dl.filippo.io/mkcert/latest?for=linux/amd64"
+          chmod +x mkcert-v*-linux-amd64
+          sudo cp mkcert-v*-linux-amd64 /usr/local/bin/mkcert
+          echo "mkcert version: $(mkcert -version)"
+          mkcert -install
+      - name: Generate TLS certificates
+        run: pnpm mkcert
+
       - name: Lint
         run: pnpm lint
 
