chore: Add docs build step to CI
Since there was breakage due to dependency updates,
it makes sense to cover all build steps in CI.

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -68,6 +68,9 @@ jobs:
           file: packages/server/Dockerfile
           push: false
 
+      - name: Build docs
+        run: pnpm build:docs
+
   # ----------------------------------------------------------------------------
 
   cd-npm:
