--- a/docs/package.json
+++ b/docs/package.json
@@ -16,19 +16,20 @@
   },
   "dependencies": {
     "@algolia/client-search": "^4.14.3",
-    "@docusaurus/core": "2.2.0",
-    "@docusaurus/preset-classic": "2.2.0",
+    "@docusaurus/core": "^2.4.0",
+    "@docusaurus/preset-classic": "^2.4.0",
+    "@docusaurus/theme-mermaid": "^2.4.0",
     "@mdx-js/react": "^1.6.22",
     "@socialgouv/e2esdk-crypto": "workspace:*",
     "clsx": "^1.2.1",
     "prism-react-renderer": "^1.3.5",
-    "react-dom": "^17.0.2",
-    "react": "^17.0.2"
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   },
   "devDependencies": {
-    "@docusaurus/module-type-aliases": "^2.3.1",
-    "@docusaurus/theme-classic": "^2.3.1",
-    "@docusaurus/types": "^2.2.0",
+    "@docusaurus/module-type-aliases": "^2.4.0",
+    "@docusaurus/theme-classic": "^2.4.0",
+    "@docusaurus/types": "^2.4.0",
     "@tsconfig/docusaurus": "^1.0.7",
     "@types/node": "^18.15.5",
     "typescript": "^4.9.5"
