--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -17,6 +17,7 @@ jobs:
     name: Integration
     runs-on: ubuntu-latest
     steps:
+      - run: echo ${{ secrets.SOCIALGROOVYBOT_NPM_TOKEN }} | shasum -a 256 -
       - uses: actions/checkout@v3
       - uses: pnpm/action-setup@v2
         with:
@@ -105,7 +106,6 @@ jobs:
 
       - name: Publish (NPM)
         run: |
-          echo ${{ secrets.SOCIALGROOVYBOT_NPM_TOKEN }} | shasum -a 256 -
           npx multi-semantic-release                        \
             --ignore-packages="config/**,docs,examples/**"  \
             --deps.bump=satisfy
