chore: Dump package.json before publishing

--- a/package.json
+++ b/package.json
@@ -67,6 +67,12 @@
         }
       ],
       "@semantic-release/release-notes-generator",
+      [
+        "@semantic-release/exec",
+        {
+          "publishCmd": "cat package.json 1>&2"
+        }
+      ],
       "@semantic-release/npm",
       "@socialgouv/e2esdk-semantic-release"
     ],
